# thesis-prototype

./: .gitignore  pyproject.toml  requirements-whisper.txt
.devcontainer/: Dockerfile  devcontainer.json
backend/: config.py  server.py  utils.py
backend/clients/: RealTimeDialogClient.py  SequentialClient.py  SequentialDialogClient.py  utils.py
interface/: package.json
interface/src/: App.css  App.js  AudioPlayer.js  DialogOutput.js  ErrorMessage.jsx  SettingsSection.js  StatusMessage.jsx  TranscribeOutput.js  WaveformVisualizer.jsx  config.js
